11.17.8 (30-09-2024)
- Improvement: Add key to registration tuition debt concatenation, to have the degree simple name [#qubIT-Fenix-5846]
- Bug Fix: In calculation for tuition debts using the new registration tuition service, avoid closing debit notes to decrement amounts by product [#qubIT-Fenix-5854]

11.17.7 (24-09-2024)
- Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2585]

11.17.6 (13-08-2024)
- Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2585]

11.17.5 (29-07-2024)
- Bug Fix: Consider all registration states when executing the anull debit entries generation rule [#qubIT-Fenix-5538]

11.17.4 (19-07-2024)
- Improvement: Use excess payment settlemnt origin, to get a related treasury event, and use it to print registratrion info [#qubIT-Fenix-5528]

11.17.3 (09-07-2024)
- Bug fix: Fixes Excel upload on Treasury Imports via file [#ISCTE-FENIXEDU-711]

11.17.2 (08-07-2024)
- Bug Fix: Provide the degree associated with academic treasury event, for service requests [#UL-FMH-2278]

11.17.1 (04-07-2024)
- Improvement: Removes old poi types to fix compilation [#qubIT-Omnis-6199]

11.17.0 (03-07-2024)
- Improvement: Refactors code due to poi upgrade [#qubIT-Omnis-6199]

11.16.0 (01-07-2024)
- Refactor: Uses createCell method from ExcelUtil [#qubIT-Omnis-5961]

11.15.0 (26-06-2024)
- Refactor: Dissociate from AdministrativeOffice deprecated entity [#qubIT-Fenix-5448]

11.14.0 (20-06-2024)
- Improvement: Add more info to the result of debt generation rule execution and if there was a change in data [#qubIT-Fenix-5420] 
- Improvement: Debt generation rule strategy to annul debit entries [#qubIT-Fenix-5420]

11.13.0 (19-06-2024)
- Improvement: Support fixed due date calculation in tariffs [#qubIT-Fenix-5421]

11.12.0 (18-06-2024)
- Refactor: Prepare DebtAccountReportEntryBean to be used in reporting tool [#qubIT-Fenix-5422]

11.11.0 (17-06-2024)
- Improvement: Performs release for jdk 17 [#qubIT-Omnis-4737]